; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_wiiu_joypad.c_wiiu_joypad_query_pad.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_wiiu_joypad.c_wiiu_joypad_query_pad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 (i32)* }

@ready = common dso_local global i64 0, align 8
@MAX_USERS = common dso_local global i32 0, align 4
@pad_drivers = common dso_local global %struct.TYPE_2__** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @wiiu_joypad_query_pad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wiiu_joypad_query_pad(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @ready, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %27

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @MAX_USERS, align 4
  %8 = icmp ult i32 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %5
  %10 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @pad_drivers, align 8
  %11 = load i32, i32* %2, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %10, i64 %12
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = icmp ne %struct.TYPE_2__* %14, null
  br i1 %15, label %16, label %27

16:                                               ; preds = %9
  %17 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @pad_drivers, align 8
  %18 = load i32, i32* %2, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %17, i64 %19
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64 (i32)*, i64 (i32)** %22, align 8
  %24 = load i32, i32* %2, align 4
  %25 = call i64 %23(i32 %24)
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %16, %9, %5, %1
  %28 = phi i1 [ false, %9 ], [ false, %5 ], [ false, %1 ], [ %26, %16 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
